<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="330dp"
        android:minHeight="350dp">

        <TextView
            android:id="@+id/tvSortByText"
            android:text="@string/strSortBy"
            android:textSize="17sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvApply"
            android:text="Apply"
            android:textSize="17sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/viewSortBy"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorLightGrey"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSortByText"/>

        <RadioGroup
            android:id="@+id/rgSortByProducts"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewSortBy">

            <RadioButton
                android:id="@+id/rbPriceLowToHigh"
                android:text="@string/strPriceLowToHigh"
                android:gravity="start|center"
                android:textSize="17sp"
                android:padding="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbPriceHighToLow"
                android:text="@string/strPriceHighToLow"
                android:gravity="start|center"
                android:textSize="17sp"
                android:padding="15dp"
                android:checked="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbRelevance"
                android:text="@string/strRelevance"
                android:gravity="start|center"
                android:textSize="17sp"
                android:padding="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbNewestFirst"
                android:text="@string/strNewestFirst"
                android:gravity="start|center"
                android:textSize="17sp"
                android:padding="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbPopularity"
                android:text="@string/strPopularity"
                android:gravity="start|center"
                android:textSize="17sp"
                android:padding="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>