<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            tools:context=".ui.merchant.MerchantDetailPage">

            <TextView
                android:id="@+id/tvBenefitPrimeMerchant"
                android:text="@string/strBenefitsPrimeMerchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvPrimeMerchantDesc"
                android:text="@string/strBenefitPrimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:paddingTop="3dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBenefitPrimeMerchant"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainMerchantBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:padding="@dimen/_8dp"
                android:background="@drawable/merchant_prime_bg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrimeMerchantDesc">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewMerchantPrimeBenefits"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:itemCount="3"
                    tools:listitem="@layout/merchant_benefit_prime_item_layout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvWhySellOnNotebook"
                android:text="@string/strWhySellOnNotebookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clMainMerchantBlock"/>

            <TextView
                android:id="@+id/tvWhySellOnNotebookDesc"
                android:text="@string/strWhySellOnNotebookDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toTopOf="@+id/tvViewMore"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhySellOnNotebook"/>

            <TextView
                android:id="@+id/tvViewMore"
                android:text="@string/strViewMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhySellOnNotebookDesc"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>