<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addressVM"
            type="com.notebook.android.ui.myAccount.address.AddressVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clErrorView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/tvErrorText"
                android:text="@string/strEnterAddrText"
                android:layout_width="0dp"
                android:padding="14dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clErrorView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/tvEnterAddress"
                    android:text="@string/strEnterAddrText"
                    android:layout_width="0dp"
                    android:padding="14dp"
                    android:textSize="17sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_bg"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clAddressFields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvEnterAddress">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilBuildingStreet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/strBuildingStreetHint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!--android:text="@={addressVM.edtBuildingStreet}"-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtBuildingStreet"
                            android:layout_width="match_parent"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:inputType="textCapWords"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLocality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/strLocality"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilBuildingStreet">

                        <!--android:text="@={addressVM.edtLocality}"-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtLocality"
                            android:layout_width="match_parent"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:inputType="textCapWords"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/strCityText"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilLocality">
                        <!--android:text="@={addressVM.edtCity}"-->

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCity"
                            android:layout_width="match_parent"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:inputType="textCapWords"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilState"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:hint="@string/strState"
                        app:layout_constraintTop_toBottomOf="@+id/tilCity"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!--android:text="@={addressVM.edtState}"-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtState"
                            android:layout_width="match_parent"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:inputType="textCapWords"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPincode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:hint="@string/strPincode"
                        app:layout_constraintTop_toBottomOf="@+id/tilState"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!--android:text="@={addressVM.edtPincode}"-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPincode"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal"
                            android:maxLength="6"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/strCountry"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tilPincode"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!--android:onClick="@{addressVM.showCountryPopup}"
                            android:text="@={addressVM.edtCountry}"-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCountry"
                            android:layout_width="match_parent"
                            android:inputType="textCapWords"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorBlack"

                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:editable="false"
                            android:focusable="false"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--android:onClick="@{addressVM.addOrUpdateAddressClickListener}"-->

                <Button
                    android:id="@+id/btnAddressSubmit"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:background="@drawable/sign_up_btn_bg"
                    android:text="@string/strSubmit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clAddressFields"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>